# mcu-drivers

./: .gitmodules  README.md  release_notes.txt  sdk_version.h
samples/audio/cs35l56/sample_app/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/audio/cs35l56/sample_app/boards/: nucleo_f401re.overlay
samples/audio/cs35l56/sample_app/src/: CMakeLists.txt  cs35l56_bsp.c  cs35l56_bsp.h  cs35l56_firmware.c  cs35l56_firmware.h  main.c
samples/haptics/cs40l50/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/haptics/cs40l50/audio2haptics/: CMakeLists.txt  README.md  prj.conf
samples/haptics/cs40l50/audio2haptics/boards/: nucleo_f401re.overlay
samples/haptics/cs40l50/audio2haptics/src/: cs40l50_bsp.c  cs40l50_bsp.h  cs40l50_firmware.c  cs40l50_firmware.h  main.c
samples/haptics/cs40l50/diagnostics/: README.md  prj.conf
samples/haptics/cs40l50/diagnostics/boards/: nucleo_f401re.overlay
samples/haptics/cs40l50/diagnostics/src/: cs40l50_bsp.c  cs40l50_bsp.h  cs40l50_firmware.c  cs40l50_firmware.h  main.c
samples/haptics/cs40l50/host_init_haptics/: README.md  prj.conf
samples/haptics/cs40l50/host_init_haptics/boards/: nucleo_f401re.overlay
samples/haptics/cs40l50/host_init_haptics/src/: cs40l50_bsp.c  cs40l50_bsp.h  cs40l50_firmware.c  cs40l50_firmware.h  main.c  waveforms.c  waveforms.h
samples/haptics/cs40l50/sample_app/: README.md  prj.conf
samples/haptics/cs40l50/src/: CMakeLists.txt  cs40l50_bsp.c  cs40l50_bsp.h  cs40l50_firmware.c  cs40l50_firmware.h  cs40l50_fw_img.c  cs40l50_fw_img.h  cs40l50_syscfg_regs.c  cs40l50_syscfg_regs.h  main.c
(+1210 files in other folders)
